--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title> <%= title %> </title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= csrf_meta_tags %>
+  <%= stylesheet_link_tag("application", 'my2', :media => "all") %>
   <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+
 </head>
-<body style="background: #EEEEEE">
+<body>
 
 <%= yield %>
 
