--- a/app/assets/stylesheets/my2.css
+++ b/app/assets/stylesheets/my2.css
@@ -133,25 +133,23 @@ div .sticker {
   height: 80%;
   font: bold 18px AvenirNextLTPro-Bold;
   color: #ebbc00;
-  
-  
 }
-
 #name_of_board h2{
 	font: bold 48px AvenirNextLTPro-Bold;
 }
-
-#main_container 
-
+#main_container h3{
+	font: bold 40px AvenirNextLTPro-Bold;
+	color: #ebbc00;
+}
 #to_do{
 	text-align: center;
+	position
 	width: 30%;
 	height: 100%;
 	float: left;
 	padding-left: 10px;
 	padding-right: 10px;
 }
-
 #in_progress{
 	text-align: center;
 	width: 34%;
@@ -162,7 +160,6 @@ div .sticker {
 	padding-left: 10px;
 	padding-right: 10px;
 }
-
 #done{
 	text-align: center;
 	width: 30%;
@@ -171,7 +168,6 @@ div .sticker {
 	padding-left: 10px;
 	padding-right: 10px;
 }
-
 footer{
   text-align: center;
   font: bold 16px AvenirNextLTPro-Bold, arial;
