Create method to show all tickers in current scrum board - json

--- a/app/assets/stylesheets/my.css.scss
+++ b/app/assets/stylesheets/my.css.scss
@@ -79,6 +79,9 @@ h1 {
 
 #name_of_board h2{
   font: bold 48px AvenirNextLTPro-Bold;
+  position: relative;
+  top: 20px;
+  left: 56px;
 }
 
 #to_do{
