--- a/app/views/layouts/main1.html.haml
+++ b/app/views/layouts/main1.html.haml
@@ -26,5 +26,6 @@
       #done
         %h3  Done 
       
-      = yield
-      %footer  ... it created by &copy; Bogdan Naumenko / SoftServe
+    = yield
+      
+    %footer  ...it created by Bogdan Naumenko / SoftServe
