Add drag to stickers

--- a/app/views/layouts/main_window.html.haml
+++ b/app/views/layouts/main_window.html.haml
@@ -4,6 +4,10 @@
     = csrf_meta_tags 
     = stylesheet_link_tag("application", 'my', :media => "all")
     = javascript_include_tag "application"
+    = javascript_include_tag "jquery-1.9.1.js"
+    = javascript_include_tag "jquery-ui-1.10.1.custom.min.js"
+    = javascript_include_tag "personal_scripts"
+    
 
   %body
     
