--- a/app/assets/stylesheets/my.css.scss
+++ b/app/assets/stylesheets/my.css.scss
@@ -6,7 +6,7 @@ body {
   background: #e3dbd2;
   box-shadow: inset 0 100px 500px black;
   color: #fff;
-  min-width: 800px;}
+  min-width: 500px;}
 
 table{
   font: bold 18px AvenirNextLTPro-Bold;
@@ -133,4 +133,14 @@ footer{
   text-align: center;
   font: bold 16px AvenirNextLTPro-Bold, arial;
   color: #229b15;
+}
+
+.icon_delete{
+  font: bold 16px AvenirNextLTPro-Bold, arial;
+  color: #00ff00;
+  display: none;
+  position: relative;
+  top: 20px;
+  left: -55px;
+  
 }
