Change page to requirements

--- a/app/views/scrum_boards/show_me.html.haml
+++ b/app/views/scrum_boards/show_me.html.haml
@@ -4,7 +4,7 @@
     
 #main_container
   #to_do
-    %h3  To do
+    %h3  todo
     .block_to_do
       .sticker 
         +
@@ -16,7 +16,9 @@
       %div{:class => "sticker blue"} Go to GYM
 
   #in_progress
-    %h3  In Progress
-      
+    %h3  in progress
+    .block_in_progress
+     
   #done
-    %h3  Done
+    %h3  done
+    .block_done
