--- a/app/views/layouts/main_window.html.haml
+++ b/app/views/layouts/main_window.html.haml
@@ -2,15 +2,13 @@
   %head
     %title Main page
     = csrf_meta_tags 
-    = stylesheet_link_tag("application", 'my', :media => "all")
+    = stylesheet_link_tag "new", :media => "screen"
     = javascript_include_tag "application"
-    = javascript_include_tag "jquery-1.9.1.js"
-    = javascript_include_tag "jquery-ui-1.10.1.custom.min.js"
+    = javascript_include_tag "jquery-1.9.1"
+    = javascript_include_tag "jquery-ui-1.10.1.custom.min"
     = javascript_include_tag "personal_scripts"
     
 
   %body
-    
     = yield
       
-    %footer  ...it created by Bogdan Naumenko / SoftServe
