Change the controller methods

--- a/app/assets/stylesheets/new.css.scss
+++ b/app/assets/stylesheets/new.css.scss
@@ -147,3 +147,16 @@ h1 {
   top: 20px;
   left: -55px;
 }
+
+h1{
+  padding-left: 75px;
+  padding-top: 20px;
+  color:#ebbc00
+}
+.field{
+  padding-left: 30px;
+  font: bold 28px AvenirNextLTPro-Bold;
+}
+.actions{
+  padding-left: 30px;
+}
