Change dropable parameters for blocks

--- a/app/views/scrum_boards/show_me.html.haml
+++ b/app/views/scrum_boards/show_me.html.haml
@@ -11,9 +11,7 @@
         %a{:href=>"/stickers", :title => "Delete this sticker", :class => "icon_delete"}
           =image_tag("delete-icon.png", :alt => "Delete sticker")
                 
-      %div{:class => "sticker yellow"} 
-        %p{:id => "text"} 
-          Learn Lisp programming language
+      %div{:class => "sticker yellow"} Learn Lisp programming language
       %div{:class => "sticker green"} Learn Ruby programming language
       %div{:class => "sticker blue"} Go to GYM
 
