--- a/app/assets/stylesheets/new.css.scss
+++ b/app/assets/stylesheets/new.css.scss
@@ -119,7 +119,7 @@ h1 {
   float: left;
   border-left: 2px solid #eaeaea;
   border-right: 2px solid #eaeaea;
-  padding-left: 15px;
+  padding-left: 25px;
   padding-right: 5px;
 
 }
@@ -143,9 +143,9 @@ h1 {
 
 .icon_delete{
   display: none;
-  position: relative;
-  top: 20px;
-  left: -55px;
+  position: absolute;
+  left: 25px;
+  bottom: 25px;
 }
 
 h1{
