--- a/app/views/scrum_boards/show_me.html.haml
+++ b/app/views/scrum_boards/show_me.html.haml
@@ -13,21 +13,20 @@
                 
       %div{:class => "sticker yellow"} 
         Learn Lisp programming language
-        %a{:href=>"#", :title => "Delete this sticker", :class => "icon_delete"}
-          =image_tag("delete-icon.png", :alt => "Delete sticker")
+        = render "link_to_delete"
       %div{:class => "sticker green"} 
         Learn Ruby programming language
-        %a{:href=>"#", :title => "Delete this sticker", :class => "icon_delete"}
-          =image_tag("delete-icon.png", :alt => "Delete sticker")
+        = render "link_to_delete"
       %div{:class => "sticker blue"} 
         Go to GYM
-        %a{:href=>"#", :title => "Delete this sticker", :class => "icon_delete"}
-          =image_tag("delete-icon.png", :alt => "Delete sticker")
+        = render "link_to_delete"
 
   #in_progress
     %h3  in progress
     .block_in_progress
-     
+      %div{:class => "sticker purple"} 
+        Just Fish sticker
+        = render "link_to_delete"
   #done
     %h3  done
     .block_done
