--- a/app/views/scrum_boards/show_me.html.haml
+++ b/app/views/scrum_boards/show_me.html.haml
@@ -7,24 +7,23 @@
     %h3  todo
     .block_to_do
       .sticker 
-        +
-        %a{:href=>"#", :title => "Delete this sticker", :class => "icon_delete"}
-          =image_tag("delete-icon.png", :alt => "Delete sticker")
+        + 
+        = render "link_to_delete"
                 
-      %div{:class => "sticker yellow"} 
+      %div{:class => "sticker color yellow"} 
         Learn Lisp programming language
         = render "link_to_delete"
-      %div{:class => "sticker green"} 
+      %div{:class => "sticker color green"} 
         Learn Ruby programming language
         = render "link_to_delete"
-      %div{:class => "sticker blue"} 
+      %div{:class => "sticker color blue"} 
         Go to GYM
         = render "link_to_delete"
 
   #in_progress
     %h3  in progress
     .block_in_progress
-      %div{:class => "sticker purple"} 
+      %div{:class => "sticker color purple"} 
         Just Fish sticker
         = render "link_to_delete"
   #done
