--- a/app/assets/stylesheets/new.css.scss
+++ b/app/assets/stylesheets/new.css.scss
@@ -37,11 +37,10 @@ h1 {
 
 
 .sticker {
-  display: block;
   width: 115px;
   height: 114px;
  /* background: yellow;*/
-  font: bold 80px Helvetica, arial;
+  font: bold 90px Helvetica, arial;
   text-align: center;
   vertical-align: middle;
   padding: 25px;
@@ -55,6 +54,7 @@ h1 {
     bottom: 20px;
           } 
   display: inline-block;
+  position: relative;
   
   &.color.yellow {
      @include colorize(#fff073, #ffc446);
@@ -78,9 +78,9 @@ h1 {
 #main_container{
   width: 100%;
   height: 80%;
-  font: bold 18px AvenirNextLTPro-Bold;
+  font: bold 16px AvenirNextLTPro-Bold;
     h3 {
-    font: bold 40px AvenirNextLTPro-Bold;
+    font: bold 26px AvenirNextLTPro-Bold;
     color: #ebbc00;
     position: relative;
     top: -40px;
@@ -88,10 +88,12 @@ h1 {
 }
 
 #name_of_board h2{
-  font: bold 48px AvenirNextLTPro-Bold;
+  font: bold 36px AvenirNextLTPro-Bold;
   position: relative;
   top: 20px;
   left: 56px;
+  padding-top: 30px;
+  padding-bottom: 45px;
 }
 
 #to_do{
@@ -144,7 +146,7 @@ h1 {
 .icon_delete{
   display: none;
   position: absolute;
-  left: 25px;
+  left: 35px;
   bottom: 25px;
 }
 
