--- a/app/views/scrum_boards/show_me.html.haml
+++ b/app/views/scrum_boards/show_me.html.haml
@@ -1,31 +1,2 @@
-#name_of_board
-  %h2  
-    = @my_board.name_of_board
-    
-#main_container
-  #to_do
-    %h3  todo
-    .block_to_do
-      .sticker 
-        + 
-        = render "link_to_delete"
-                
-      %div{:class => "sticker color yellow"} 
-        Learn Lisp programming language
-        = render "link_to_delete"
-      %div{:class => "sticker color green"} 
-        Learn Ruby programming language
-        = render "link_to_delete"
-      %div{:class => "sticker color blue"} 
-        Go to GYM
-        = render "link_to_delete"
-
-  #in_progress
-    %h3  in progress
-    .block_in_progress
-      %div{:class => "sticker color purple"} 
-        Just Fish sticker
-        = render "link_to_delete"
-  #done
-    %h3  done
-    .block_done
+%h1 Enter the name of Board here:
+= render 'form'
