--- a/app/views/scrum_boards/current_board.html.haml
+++ b/app/views/scrum_boards/current_board.html.haml
@@ -6,7 +6,7 @@
   #to_do
     %h3  todo
     .block_to_do
-      .sticker 
+      %div{:class => "sticker", :id => "not_draggable"}
         + 
                         
       %div{:class => "sticker color yellow"} 
