--- a/app/assets/stylesheets/new.css.scss
+++ b/app/assets/stylesheets/new.css.scss
@@ -1,10 +1,10 @@
 html,body{
-  overflow: hidden;
+  overflow-x: hidden;
 }
 body {
   padding: 0;
   margin: 0;
-  height: 1300px;
+  height: 100%;
   width: 100%;
   background: #e3dbd2;
   box-shadow: inset 0 100px 500px black;
